2011-12-07  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_agente.php
	godmode/agentes/modificar_agente.php: Added tab on header in the
	agent list views to navigate from operation to godmode sections
	improving usability

2011-12-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	godmode/agentes/module_manager_editor_common.php
	godmode/agentes/module_manager.php: Added status column in 
	godmode view of modules and added delete button in 
	edition module view

	* operation/agentes/estado_monitores.php: Fixed missed
	extra query to not show modules of foreign policies

2011-12-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_agente.php: Added filter by summarized 
	agent state.
	
	Pending task: #3389947

2011-12-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added two new functions 
	to external API: set_enable_module_alerts and 
	set_disable_module_alerts for feature request 3427673

2011-12-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php
	operation/events/events.php: Added filter to hide/show alert events 
	in this view.
	
	Pending task: #3406323

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/status_monitor.php: Added sort funcionality
	and resize module value feature for string module data types.

	Pending task: #3425266

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_custom_logo.php
	include/help/es/help_custom_logo.php: Changed height and width in 
	this help view.
	
	Fixes: #3450145

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/os.php: List all OS is the page by defect.
	
	Fixes: #3450147

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_conf_gis.php
      godmode/gis_maps/configure_gis_map.php: Changed order of latitude,
      longitude and altitude in Gis maps information.